Fix overflow on navbar

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -89,8 +89,10 @@ body {
             }
 
             &.spotify-embed {
-              padding-top: 12px;
-              padding-bottom: 11px;
+              padding-top: 6px;
+              padding-bottom: 6px;
+              padding-left: 1em;
+              padding-right: 1em;
             }
           }
 
